[package]
name = "timeboost-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
prometheus = "0.13.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
