[package]
name = "timeboost-rs"
version = "0.1.0"
edition = "2021"
authors = ["rauljordan]
description = "A Rust implementation of the discrete time boost protocol for blockchain transactions"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "ethereum"]
categories = ["cryptography::cryptocurrencies", "asynchronous", "algorithms"]

[dependencies]
chrono = "0.4.26"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
prometheus = "0.13.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
